Finished initial site creation

--- a/Northwind.Mvc/appsettings.json
+++ b/Northwind.Mvc/appsettings.json
@@ -1,12 +1,12 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Northwind.Mvc-cd7b7e8e-e4a1-4c96-a463-1dc5b16014cd;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=aspnet-Northwind.Mvc-cd7b7e8e-e4a1-4c96-a463-1dc5b16014cd;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
